feat(#27): add site draft get/put with ETag locking
Add /cms/sites/{id}/draft GET + PUT with ETag/If-Match optimistic locking.
Initialize site drafts on site creation, add ownership guard, persistence adapter,
validators, Postman requests, and unit tests.

Co-authored-by: Cursor <cursoragent@cursor.com>